--- a/classes/cluster/demo/infra/config.yml
+++ b/classes/cluster/demo/infra/config.yml
@@ -25,7 +25,7 @@ classes:
 - cluster.demo
 parameters:
   _param:
-    reclass_data_repository: https://github.com/chnyda/demo-model
+    reclass_data_repository: https://github.com/horakmar/demo-model
     reclass_data_revision: master
     salt_api_password_hash: "$6$sGnRlxGf$al5jMCetLP.vfI/fTl3Z0N7Za1aeiexL487jAtyRABVfT3NlwZxQGVhO7S1N8OwS/34VHYwZQA8lkXwKMN/GS1"
     reclass_config_master: ${_param:infra_config_address}
