--- a/classes/cluster/demo1/infra/config.yml
+++ b/classes/cluster/demo1/infra/config.yml
@@ -23,13 +23,10 @@ classes:
 # Jenkins job definition
 - system_extra.jenkins.client.job.template
 - system_extra.jenkins.client.job.inline
-- cluster.demo
+- cluster.demo1
 parameters:
   _param:
-    http_proxy: http://http-proxy.cezdata.corp:8080
-    https_proxy: ${_param:http_proxy}
-    no_proxy: .cezdata.corp,.demo.local,10.0.0.0/8,172.24.0.0/13
-    reclass_data_repository: https://github.com/horakmar/demo-model
+    reclass_data_repository: https://github.com/horakmar/demo1-model
     reclass_data_revision: master
     salt_api_password_hash: "$6$sGnRlxGf$al5jMCetLP.vfI/fTl3Z0N7Za1aeiexL487jAtyRABVfT3NlwZxQGVhO7S1N8OwS/34VHYwZQA8lkXwKMN/GS1"
     reclass_config_master: ${_param:infra_config_address}
@@ -89,18 +86,3 @@ parameters:
         port: ${_param:jenkins_master_port}
         username: ${_param:jenkins_client_user}
         password: ${_param:jenkins_client_password}
-  linux:
-    system:
-      proxy:
-        pkg:
-          enabled: true
-          http: ${_param:http_proxy}
-          https: ${_param:https_proxy}
-      env:
-        http_proxy: ${_param:http_proxy}
-        https_proxy: ${_param:https_proxy}
-        no_proxy:
-        - .cezdata.corp
-        - .demo.local
-        - 10.0.0.0/8
-        - 172.24.0.0/13
